--- a/style.css
+++ b/style.css
@@ -97,22 +97,27 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
 .bubble img {
-  max-width: 50%;
-  max-height: 40%;
+  max-width: 60%;
+  max-height: 50%;
   object-fit: contain;
+  z-index: 2;
 }
 
 .bubble span {
   font-size: 20px;
   object-fit: contain;
+  font-family: 'Arial';
+  z-index: 2;
+  font-weight:700;
 }
 
 .bubble:hover {
   transition: background-color 0.2s ease;
-  z-index: 2;
+  z-index: 3;
 }
 
 .smaller {
@@ -121,7 +126,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
+  z-index: 2;
 }
 
 .smaller a {
@@ -150,11 +155,13 @@ html {
   opacity: 0; 
   z-index: 1; 
   text-align: left;
+  font-family: 'Arial';
   transition: opacity 0.2s ease;
 }
 
 .text-description h3 {
   margin: 0;
+  font-family: 'Arial';
   font-size: 18px;
   color: #fff;
   margin-bottom: 5px;
@@ -164,7 +171,19 @@ html {
 .smaller:hover .text-description {
   visibility: visible;
   opacity: 1;
-  z-index: 2;
+  z-index: 3;
+}
+
+.text-description:hover {
+  display: none;
+}
+
+.border {
+  position: absolute;
+  width:320px;
+  height: 320px;
+  border-radius: 50%;
+  z-index: 1;
 }
 
 /*category 1*/
@@ -181,6 +200,10 @@ html {
 
 #bubble1:hover {
   background-color: #fca206;
+}
+
+#border1{
+  background: radial-gradient(circle farthest-side, #c5c6ff, #ffffc5);
 }
 
 #EPFLCourses {
@@ -211,7 +234,7 @@ html {
 /*category 2*/
 
 #bubble2 {
-  background-color: #FF914D;
+  background-color: #ff684d;
   transform: translate(-200px,125px) rotate(0deg);
 }
 
@@ -222,6 +245,10 @@ html {
 
 #bubble2:hover {
   background-color: #ff6506;
+}
+
+#border2{
+  background: radial-gradient(circle farthest-side, #ff4d4d,#ffffc5);
 }
 
 #associationdébouchésdurables {
@@ -295,6 +322,10 @@ html {
   background-color: #40ff00;
 }
 
+#border3{
+  background: radial-gradient(circle farthest-side,#95F823, #ffffc5);
+}
+
 #LaConvergence {
   background-color: transparent;
   transform: translate( 0px, -126px ) rotate(0deg);
@@ -363,9 +394,12 @@ html {
 }
 
 #bubble4:hover {
-  background-color: #fa60b5;
+  background-color: #fe8196;
 }
 
+#border4{
+  background: radial-gradient(circle farthest-side,#ff70a6, #ffffc5);
+}
 
 #Make {
   background-color: transparent;
@@ -406,6 +440,10 @@ html {
 
 #bubble5:hover {
   background-color: #0478fd;
+}
+
+#border5{
+  background: radial-gradient(circle farthest-side,#70d6ff, #ffffc5);
 }
 
 #SportscenterEPFL-UNIL {
