--- a/website3.css
+++ b/website3.css
@@ -16,6 +16,13 @@ body {
     overflow-x: hidden;
 }
 
+@font-face {
+    font-family: 'SuisseIntl';
+    src: url('font/SuisseIntl-Medium.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
     scroll-snap-type: y mandatory;
 }
@@ -42,7 +49,7 @@ html {
     Justify-content: space-between;
     font-size: 28px;
     font-weight: bold;
-    font-family: 'Arial';
+    font-family: 'SuisseIntl';
     color: #fff;
 }
 
@@ -56,7 +63,7 @@ html {
     justify-content: space-between;
     flex-direction: row;
     font-size: large;
-    font-family: 'Arial';
+    font-family: 'SuisseIntl';
     color: #fff;
 }
 
@@ -68,13 +75,13 @@ html {
 .appetizer .text h1 {
     font-size: 32px;
     font-weight: bold;
-    font-family: 'Arial';
+    font-family: 'SuisseIntl';
 }
 
 .appetizer .text p {
     margin-top: 20%;
     font-size: 22px;
-    font-family: 'Arial';
+    font-family: 'SuisseIntl';
 }
 
 .appetizer img {
@@ -114,7 +121,7 @@ html {
 .bubble span {
     font-size: 16px;
     object-fit: contain;
-    font-family: 'Arial';
+    font-family: 'SuisseIntl';
     z-index: 2;
     font-weight: 700;
 }
@@ -123,7 +130,7 @@ html {
     z-index: 3;
 }
 
-.bubble:hover .smaller{
+.bubble:hover .smaller {
     opacity: 1;
     transition: opacity 0.3s ease;
 }
@@ -168,13 +175,13 @@ html {
     opacity: 0;
     z-index: 1;
     text-align: left;
-    font-family: 'Arial';
+    font-family: 'SuisseIntl';
     transition: opacity 0.2s ease;
 }
 
 .text-description h3 {
     margin: 0;
-    font-family: 'Arial';
+    font-family: 'SuisseIntl';
     font-size: 18px;
     color: #fff;
     margin-bottom: 5px;
