--- a/style.css
+++ b/style.css
@@ -97,12 +97,7 @@ html {
   font-size: 22px;
   font-family: 'SuisseIntlLight';
 }
-<<<<<<< HEAD
 .appetizer .image {
-=======
-
-.appetizer img {
->>>>>>> 21943739f77abe7d343b2f396b9cb2eb9c9e02f8
   float: right;
   width: 60%;
 }
@@ -480,4 +475,27 @@ html {
 #ForêtdeDorigny {
   background-color: transparent;
   transform: translate(119px, -39px) rotate(0deg);
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  #bubble1 {
+    transform: translate(0px, -300px) rotate(0deg);
+  }
+
+  #bubble2 {
+    transform: translate(-200px, -100px) rotate(0deg);
+  }
+
+  #bubble3 {
+    transform: translate(-200px, 100px) rotate(0deg);
+  }
+
+  #bubble4 {
+    transform: translate(-200px, 300px) rotate(0deg);
+  }
+
+  #bubble5 {
+    transform: translate(-200px, 500px) rotate(0deg);
+  }
 }
