--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 #intro {
-  background: linear-gradient(#007480, #ffffc5);
+  background: linear-gradient(#47d9e9, #ffffc5);
 }
 
 .appetizer .image img {
