--- a/website_test.css
+++ b/website_test.css
@@ -36,23 +36,22 @@ body {
   background: linear-gradient(#47d9e9, #ffffc5);
 }
 
-.appetizer .image img {
-  display: none;
-}
-
 #content {
-  background-color: #ffffc5;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
+  background-color: #fefe0b;
+  margin-top: 2%;
+  float: right;
+  width: 60%;
+  aspect-ratio: 1.78;
+  display: flex;
+  flex-direction: row;
 }
 
 .bubble {
   position: relative;
-  width: 150px;
-  height: 150px;
-  margin: 100px;
+  height:40%;
+  aspect-ratio: 1;
   border-radius: 50%;
   cursor: pointer;
   display: flex;
@@ -130,8 +129,8 @@ body {
 
 .border {
   position: absolute;
-  width: 320px;
-  height: 320px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   z-index: 1;
 }
@@ -159,12 +158,6 @@ body {
     scroll-snap-type: y mandatory;
   }
 
-  .container {
-    width: 100%;
-    height: 50%;
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
-  }
 
   .banner {
     position: absolute;
@@ -224,26 +217,6 @@ body {
     font-size: .6em;
     font-family: 'SuisseIntlLight';
   }
-  .appetizer .image {
-    margin-top: 2%;
-    float: right;
-    width: 60%;
-  }
-  .appetizer .image img {
-    display: block;
-    width: 100%;
-    object-fit: contain;
-  }
-  .appetizer .image p {
-    font-size: .8em;
-    font-family: 'SuisseIntlLight';
-    color: #000;
-  }
-
-  .bubble {
-    position: absolute;
-  }
-
 
   .bubble span {
     font-size: 20px;
@@ -297,7 +270,7 @@ body {
   /*category 1*/
 
   #bubble1 {
-    transform: translate(-400px, -125px) rotate(0deg);
+    transform: translate(0%, -250%) rotate(0deg);
   }
 
   #bubble1 .text-description {
@@ -309,7 +282,7 @@ body {
   /*category 2*/
 
   #bubble2 {
-    transform: translate(-200px, 125px) rotate(0deg);
+    transform: translate(0%, 50%) rotate(0deg);
   }
 
   #bubble2 .text-description {
@@ -321,7 +294,7 @@ body {
   /*category 3*/
 
   #bubble3 {
-    transform: translate(0px, -125px) rotate(0deg);
+    transform: translate(0%, -25%) rotate(0deg);
   }
 
   #bubble3 .text-description {
@@ -333,7 +306,7 @@ body {
   /*category 4*/
 
   #bubble4 {
-    transform: translate(200px, 125px) rotate(0deg);
+    transform: translate(0%, 125px) rotate(0deg);
   }
 
   #bubble4 .text-description {
@@ -345,7 +318,7 @@ body {
   /*category 5*/
 
   #bubble5 {
-    transform: translate(400px, -125px) rotate(0deg);
+    transform: translate(0%, -125px) rotate(0deg);
   }
 
   #bubble5 .text-description {
