--- a/style.css
+++ b/style.css
@@ -33,7 +33,68 @@ body {
 }
 
 #intro {
+  position: relative;
+  height: 400px;
   background: linear-gradient(#47d9e9, #ffffc5);
+}
+
+.banner {
+  position: absolute;
+  top: 0%;
+  left: 5%;
+  width: 90%;
+  height: 9%;
+  display: flex;
+  align-items: end;
+  Justify-content: space-between;
+  font-weight: bold;
+  font-family: 'SuisseIntl';
+  color: #000;
+  border-bottom: 1px solid #000;
+}
+.banner .title {
+  font-size: 2em;
+  font-weight: bold;
+  font-family: 'SuisseIntl';
+}
+.banner .lang{
+  display: flex;
+  justify-content: space-evenly;
+  width: 8%;
+}
+.banner .lang span{
+  font-size: 1.1em;
+  font-weight: bold;
+  font-family: 'SuisseIntl';
+}
+.appetizer {
+  position: absolute;
+  top: 15%;
+  left: 5%;
+  width: 90%;
+  height: 90%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  font-size: large;
+  color: #000;
+}
+
+.appetizer .text {
+  width: 100%;
+  height: 100%;
+}
+
+.appetizer .text h1 {
+  font-size: 2em;
+  font-weight: bold;
+  font-family: 'SuisseIntl';
+}
+
+.appetizer .text p {
+  margin-top: 3%;
+  font-size: .6em;
+  font-family: 'SuisseIntlLight';
 }
 
 .appetizer .image img {
@@ -161,69 +222,16 @@ body {
 
   .container {
     width: 100%;
-    height: 50%;
+    height: 50% !important;
     scroll-snap-align: start;
     scroll-snap-stop: always;
   }
 
-  .banner {
-    position: absolute;
-    top: 0%;
-    left: 5%;
-    width: 90%;
-    height: 9%;
-    display: flex;
-    align-items: end;
-    Justify-content: space-between;
-    font-weight: bold;
-    font-family: 'SuisseIntl';
-    color: #000;
-    border-bottom: 1px solid #000;
-  }
-  .banner .title {
-    font-size: 2em;
-    font-weight: bold;
-    font-family: 'SuisseIntl';
-  }
-  .banner .lang{
-    display: flex;
-    justify-content: space-evenly;
-    width: 8%;
-  }
-  .banner .lang span{
-    font-size: 1.1em;
-    font-weight: bold;
-    font-family: 'SuisseIntl';
-  }
-  .appetizer {
-    position: absolute;
-    top: 15%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    font-size: large;
-    color: #000;
-  }
-  
   .appetizer .text {
     width: 35%;
     height: 100%;
   }
-  
-  .appetizer .text h1 {
-    font-size: 2em;
-    font-weight: bold;
-    font-family: 'SuisseIntl';
-  }
-  
-  .appetizer .text p {
-    margin-top: 3%;
-    font-size: .6em;
-    font-family: 'SuisseIntlLight';
-  }
+
   .appetizer .image {
     margin-top: 2%;
     float: right;
@@ -233,11 +241,6 @@ body {
     display: block;
     width: 100%;
     object-fit: contain;
-  }
-  .appetizer .image p {
-    font-size: .8em;
-    font-family: 'SuisseIntlLight';
-    color: #000;
   }
 
   .bubble {
@@ -256,7 +259,7 @@ body {
   }
 
   .smaller {
-    width: 70px;
+    width: 80px;
     height: 70px;
   }
 
