--- a/style.css
+++ b/style.css
@@ -141,8 +141,8 @@ body {
 
 .smaller {
   position: absolute;
-  width: 40%;
-  height: auto;
+  width: 65%;
+  height: 45%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -153,6 +153,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 }
@@ -258,7 +259,7 @@ body {
   }
 
   .smaller {
-    width: 80px;
+    width: 100px;
     height: 70px;
   }
 
