--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
   top: 0%;
   left: 5%;
   width: 90%;
-  height: 9%;
+  height: 20%;
   display: flex;
   align-items: end;
   Justify-content: space-between;
@@ -216,6 +216,9 @@ body {
     scroll-snap-stop: always;
   }
 
+  .banner {
+    height: 9%;
+  }
   .appetizer .text {
     width: 35%;
     height: 100%;
