--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
   top: 0%;
   left: 5%;
   width: 90%;
-  height: 20%;
+  height:auto;
   display: flex;
   align-items: end;
   Justify-content: space-between;
@@ -68,8 +68,8 @@ body {
   font-family: 'SuisseIntl';
 }
 .appetizer {
-  position: absolute;
-  top: 15%;
+  position: relative;
+  top: 10%;
   left: 5%;
   width: 90%;
   height: 90%;
